# mciMusicPlayer

./: .gitignore  CMakeLists.txt  README.md  UI.h  liangyu_main.cpp  main.cpp  playlist.h  readme.md  start.h  ui.cpp
documents/需求文档/: my需求文档.md  my需求文档.xlsx
function/: UI.cpp  UI.h  button.cpp  button.h  button1.cpp  button1.h  def.h  drawAlpha.h  drawMain.h  drewSetting.h  playMusic.cpp  playMusic.h  printmainPage.cpp  printmainPage.h  txt.cpp  txt.h
image/: readme.md
service/: MusicPlayer.cpp  MusicPlayer.h  Song.h  StoW.h  button.cpp  button.h  congfig.cpp  congfig.h  def.h  loadfile.cpp  loadfile.h  montior.cpp  montior.h  player.cpp  player.h  playlist.cpp  playlist.h
service/log/: log.cpp
service/misic/: Song.cpp  Song.h
service/misic/menu/: menu.cpp  menu.h
service/music/: Song.cpp  Song.h  log.cpp  menu.cpp  menu.h
sources/image/: readme.md
sources/music/: ちっちゃな私.lrc  一半一半-Top Barry&amp;INDEcompany.lrc
temp/: MusicManager.cpp  MusicManager.h  MusicPlayer.h  UI.cpp  UI.h  button.cpp  button.h  button1.cpp  button1.h  huodou - 副本.h  liangyu_main.cpp  main - huodou.cpp  main1.cpp  player.cpp  player.h  playlist.cpp  ui_liangyu.cpp  ui_liangyu.h
view/: base.h  drawAlbum.cpp  drawAlbum.h  drawDeveloper.cpp  drawDeveloper.h  drawLyrics.cpp  drawLyrics.h  drawMain.cpp  drawMain.h  drawPlayLine.cpp  drawPlayLine.h  drawPlayList.cpp  drawPlayList.h  drawSetting.cpp  drewSetting.h
view/menu/: menu.cpp  menu.h
view/music list/: MusicManager.h
